--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
   "engines": {
     "npm": ">=7.0.0 <9.0.0",
     "yarn": ">=1.22.0",
-    "node": ">=16.10.0 <17.0.0"
+    "node": "22.x"
   }
 }
